--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main {
@@ -27,6 +27,10 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus voluptatum voluptatem non molestiae doloremque ad laborum sunt eius facilis, ipsum autem eum sequi magni eveniet ratione quibusdam quae odio laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum adipisci mollitia veniam sint quia nam voluptatibus illum corporis corrupti? Ipsum nam excepturi dolorem quis cupiditate repellendus quasi. Optio, placeat ipsa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit ullam corrupti quae magnam, in libero debitis ab aspernatur fugit ipsam quod expedita molestiae, a quibusdam totam. Cum, id totam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus voluptatum voluptatem non molestiae doloremque ad laborum sunt eius facilis, ipsum autem eum sequi magni eveniet ratione quibusdam quae odio laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum adipisci mollitia veniam sint quia nam voluptatibus illum corporis corrupti? Ipsum nam excepturi dolorem quis cupiditate repellendus quasi. Optio, placeat ipsa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit ullam corrupti quae magnam, in libero debitis ab aspernatur fugit ipsam quod expedita molestiae, a quibusdam totam. Cum, id totam.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus voluptatum voluptatem non molestiae doloremque ad laborum sunt eius facilis, ipsum autem eum sequi magni eveniet ratione quibusdam quae odio laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum adipisci mollitia veniam sint quia nam voluptatibus illum corporis corrupti? Ipsum nam excepturi dolorem quis cupiditate repellendus quasi. Optio, placeat ipsa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit ullam corrupti quae magnam, in libero debitis ab aspernatur fugit ipsam quod expedita molestiae, a quibusdam totam. Cum, id totam.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus voluptatum voluptatem non molestiae doloremque ad laborum sunt eius facilis, ipsum autem eum sequi magni eveniet ratione quibusdam quae odio laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum adipisci mollitia veniam sint quia nam voluptatibus illum corporis corrupti? Ipsum nam excepturi dolorem quis cupiditate repellendus quasi. Optio, placeat ipsa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit ullam corrupti quae magnam, in libero debitis ab aspernatur fugit ipsam quod expedita molestiae, a quibusdam totam. Cum, id totam.</p>
     </main>
 </body>
