--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,21 +11,22 @@
         }
         table {
             width: 400px;
+            height: 400px;
+            text-align: center;
             border-collapse: collapse;
         }
 
-        tr.linha {
-            background-color: gray;
+        .numero {
+            text-align: right;
         }
 
 
         td {
             border: 1px solid black;
             padding: 8px;
+            vertical-align: middle;
         }
-        td.dado {
-            background-color: yellow;
-        }
+        
     </style>
 </head>
 <body>
@@ -36,18 +37,18 @@
              <td>B1</td>
              <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
-            <td class="dado">A4</td>
+            <td>A4</td>
             <td>B4</td>
             <td>C4</td>
         </tr>
