atualização do exercicio 023

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -24,9 +25,18 @@
             background-color: gray;
             color: white;
         }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: lightgray;
+        }
 
         .num {
             text-align: right;
+        }
+
+        tbody tr:nth-child(2n) {
+            background-color: lightgray;
         }
 
         caption {
@@ -162,5 +172,11 @@
         <td class="num"><strong>212 709 121</strong></td>
        </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut inventore vel praesentium! Rerum, commodi facilis! Consectetur minus eligendi cum, cupiditate provident deleniti sequi, earum fugit nisi rem quam autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti nulla repudiandae, dignissimos tempore quidem, cumque laboriosam hic repellat neque numquam harum. Dolores odit beatae consequatur inventore ad alias, dolorum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae nesciunt facilis numquam dicta repellat accusamus laboriosam amet rerum non nisi eum voluptatibus consequatur consectetur, accusantium sapiente. Incidunt, minus temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis corporis excepturi quod iure harum voluptates delectus minima, similique suscipit ad maxime sequi eveniet dolor accusantium exercitationem sapiente quos provident omnis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut inventore vel praesentium! Rerum, commodi facilis! Consectetur minus eligendi cum, cupiditate provident deleniti sequi, earum fugit nisi rem quam autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti nulla repudiandae, dignissimos tempore quidem, cumque laboriosam hic repellat neque numquam harum. Dolores odit beatae consequatur inventore ad alias, dolorum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae nesciunt facilis numquam dicta repellat accusamus laboriosam amet rerum non nisi eum voluptatibus consequatur consectetur, accusantium sapiente. Incidunt, minus temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis corporis excepturi quod iure harum voluptates delectus minima, similique suscipit ad maxime sequi eveniet dolor accusantium exercitationem sapiente quos provident omnis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut inventore vel praesentium! Rerum, commodi facilis! Consectetur minus eligendi cum, cupiditate provident deleniti sequi, earum fugit nisi rem quam autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti nulla repudiandae, dignissimos tempore quidem, cumque laboriosam hic repellat neque numquam harum. Dolores odit beatae consequatur inventore ad alias, dolorum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae nesciunt facilis numquam dicta repellat accusamus laboriosam amet rerum non nisi eum voluptatibus consequatur consectetur, accusantium sapiente. Incidunt, minus temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis corporis excepturi quod iure harum voluptates delectus minima, similique suscipit ad maxime sequi eveniet dolor accusantium exercitationem sapiente quos provident omnis.</p>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut inventore vel praesentium! Rerum, commodi facilis! Consectetur minus eligendi cum, cupiditate provident deleniti sequi, earum fugit nisi rem quam autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti nulla repudiandae, dignissimos tempore quidem, cumque laboriosam hic repellat neque numquam harum. Dolores odit beatae consequatur inventore ad alias, dolorum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae nesciunt facilis numquam dicta repellat accusamus laboriosam amet rerum non nisi eum voluptatibus consequatur consectetur, accusantium sapiente. Incidunt, minus temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis corporis excepturi quod iure harum voluptates delectus minima, similique suscipit ad maxime sequi eveniet dolor accusantium exercitationem sapiente quos provident omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut inventore vel praesentium! Rerum, commodi facilis! Consectetur minus eligendi cum, cupiditate provident deleniti sequi, earum fugit nisi rem quam autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti nulla repudiandae, dignissimos tempore quidem, cumque laboriosam hic repellat neque numquam harum. Dolores odit beatae consequatur inventore ad alias, dolorum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae nesciunt facilis numquam dicta repellat accusamus laboriosam amet rerum non nisi eum voluptatibus consequatur consectetur, accusantium sapiente. Incidunt, minus temporibus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis corporis excepturi quod iure harum voluptates delectus minima, similique suscipit ad maxime sequi eveniet dolor accusantium exercitationem sapiente quos provident omnis.</p>
+        
 </body>
 </html>
